--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@phosphor-icons/react": "^2.1.7",
     "@tailwindcss/vite": "^4.0.6",
+    "boxicons": "^2.1.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-boxicons": "^0.0.28",
+    "react-dom": "^19.0.0",
+    "react-fontawesome": "^1.7.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-fontawesome": "^1.6.8",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
