--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.2.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
