--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,14 @@
 {
-    "routes": [
-      {
-        "src": "/.*",
-        "dest": "/index.html"
+  "routes": [
+    {
+      "src": "/assets/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
       }
-    ]
-  }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
