--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-fontawesome": "^1.7.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
