--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
     "react-type-animation": "^3.2.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@emailjs/browser": "^4.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
